--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,6 @@
 
 <body class="mat-typography">
     <app-root></app-root>
-</body>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  </body>
 </html>
